force-app/main/default/objects/Sales_Order_Line_Item__c/fields/ALP_Flag__c.field-meta.xml
<CustomField>
    <fullName>ALP_Flag__c</fullName>
    <label>ALP Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>