force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Card_Authorization_Flag__c.field-meta.xml
<CustomField>
    <fullName>Card_Authorization_Flag__c</fullName>
    <label>Card Authorization Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>