force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Time__c</fullName>
    <label>Create Date Time</label>
    <type>Date</type>
</CustomField>