force-app/main/default/objects/Sales_Order_Line_Item__c/fields/DOS_Item_Cancel_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>DOS_Item_Cancel_Confirmation__c</fullName>
    <label>DOS Item Cancel Confirmation</label>
    <length>1</length>
    <type>Text</type>
</CustomField>