force-app/main/default/objects/Sales_Order_Line_Item__c/fields/DOS_Resv_Conf_Flag__c.field-meta.xml
<CustomField>
    <fullName>DOS_Resv_Conf_Flag__c</fullName>
    <label>DOS Resv Conf Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>