force-app/main/default/objects/Sales_Order_Line_Item__c/fields/DOS_Sales_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>DOS_Sales_Check_Number__c</fullName>
    <label>DOS Sales Check Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>