force-app/main/default/objects/Sales_Order_Line_Item__c/fields/High_Level_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Item_Number__c</fullName>
    <label>High Level Item Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>