force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Item_Reject_Reason_Desc__c.field-meta.xml
<CustomField>
    <fullName>Item_Reject_Reason_Desc__c</fullName>
    <label>Item Reject Reason Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>