force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Item_Status__c</fullName>
    <label>Item Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>