force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Kwert_Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Kwert_Floor_Price__c</fullName>
    <label>Kwert Floor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>