force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Kwert_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Kwert_Profit_Margin__c</fullName>
    <label>Kwert Profit Margin</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>