force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Kwert_Rebate_Basis__c.field-meta.xml
<CustomField>
    <fullName>Kwert_Rebate_Basis__c</fullName>
    <label>Kwert Rebate Basis</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>