force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Kwert_ZDDF__c.field-meta.xml
<CustomField>
    <fullName>Kwert_ZDDF__c</fullName>
    <label>Kwert ZDDF</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>