force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Kwert_ZMLP__c.field-meta.xml
<CustomField>
    <fullName>Kwert_ZMLP__c</fullName>
    <label>Kwert ZMLP</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>