force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Kwert_ZPR0__c.field-meta.xml
<CustomField>
    <fullName>Kwert_ZPR0__c</fullName>
    <label>Kwert ZPR0</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>