force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Landed_Cost__c</fullName>
    <label>Landed Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>