force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Last_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Confirmed_Date__c</fullName>
    <label>Last Confirmed Date</label>
    <type>Date</type>
</CustomField>