force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <formula>(Sales_Revenue__c -  Total_Cost__c) /  Sales_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Margin Percentage = (Sales_Revenue__c -  Total_Cost__c) /  Sales_Revenue__c</inlineHelpText>
    <label>Margin Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>