force-app/main/default/objects/Sales_Order_Line_Item__c/fields/OMS_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>OMS_Order_Id__c</fullName>
    <label>OMS Order Id</label>
    <length>11</length>
    <type>Text</type>
</CustomField>