force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>