force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>