force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Release_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Release_Quantity__c</fullName>
    <label>Release Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>