force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Sales_Order_Header__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Header__c</fullName>
    <label>Sales Order Header</label>
    <referenceTo>Sales_Order_Header__c</referenceTo>
    <relationshipLabel>Sales Order Line Items</relationshipLabel>
    <relationshipName>Sales_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>