force-app/main/default/objects/Sales_Order_Line_Item__c/fields/Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sales_Revenue__c</fullName>
    <formula>Quantity__c *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity__c *  Unit_Price__c = Sales/Revenue</inlineHelpText>
    <label>Sales/Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>