force-app/main/default/objects/Sales_Order_Line_Item__c/validationRules/Cannot_Edit_Order_Line_Item_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Order_Line_Item_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name) 
&amp;&amp;
NOT (ISNEW())</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Line Item Name cannot be modified</errorMessage>
</ValidationRule>